--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.1",
     "description": "socket.io app",
     "dependencies": {
+	"node": "0.10.36”,
         "express": "4.10.2",
         "socket.io": "1.2.0"
     }
