--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "socket",
     "version": "1.0.0",
     "description": "hihi",
-    "main": "scripts/server.js",
+    "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
